--- a/index.html
+++ b/index.html
@@ -98,7 +98,20 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p> 
 		<a href="#two" class="w3-btn w3-black"> Go to Page Two </a>
-    	</div>
+		<html>
+	<title>W3.CSS</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<body>
+
+	<div class="w3-container">
+	  <h2>
+	  <input type="button" class="w3-button w3-black" value="Yes">
+	  <input type="button" class="w3-button w3-black" value="No">
+
+	  </h2>
+	</div>
+		</div>
 </div>
 
 <div class="page" id="two">
