--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<div class="w3-container">
 	  <h2>
-	  <input type="button" class="w3-button w3-black" value="Yes">
-	  <input type="button" class="w3-button w3-black" value="No">
+	  <input href="#two" type="button" class="w3-button w3-black" value="Yes">
+	  <input href="#two" type="button" class="w3-button w3-black" value="No">
 
 	  </h2>
 	</div>
