--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ blah, blah, blah,
  
 Known Issues:
 blah, blah, blah, blah
-
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
 -->
@@ -105,9 +104,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<div class="w3-container">
 	  <h2>
-	  <input href="#two" type="button" class="w3-button w3-black" value="Yes"</a>
-	  <input href="#two" type="button" class="w3-button w3-black" value="No"</a>
-
+	  <a href="#two" class="w3-btn w3-black"> Yes </a>
+	 <a href="#two" class="w3-btn w3-black"> No </a>
 	  </h2>
 	</div>
 		</div>
