--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
         function allergyAdd(){
             allergy_count = allergy_count + 1;
-		alert(allergy_count);
 
         }
 
@@ -105,7 +104,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div class="w3-container">
 	  <h2>
 	  <a href="#two" class="w3-btn w3-black"> Yes </a>
-	 <a href="#two" class="w3-btn w3-black"> No </a>
+	 <a href="#two" class="w3-btn w3-black"> No </a> 
+<!-- these are the buttons that direct you to page 2-->
 	  </h2>
 	</div>
 		</div>
