--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
         function allergyAdd(){
-            allergy_count = allergy_count + 1;
+            allergy_count = allergy_count + 1; <!-- I removed the alert so that I can desplay results on last page-->
 
         }
 
@@ -104,8 +104,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div class="w3-container">
 	  <h2>
 	  <a href="#two" class="w3-btn w3-black"> Yes </a>
-	 <a href="#two" class="w3-btn w3-black"> No </a> 
-<!-- these are the buttons that direct you to page 2-->
+	 <a href="#two" class="w3-btn w3-black"> No </a> <!-- these are the buttons that direct you to page 2-->
 	  </h2>
 	</div>
 		</div>
