--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<div class="w3-container">
 	  <h2>
-	  <a href="#two" class="w3-btn w3-black"> Yes </a>
-	 <a href="#two" class="w3-btn w3-black"> No </a> <!-- these are the buttons that direct you to page 2-->
+	  <a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>
+	 <a href="#two" onclick="coldAdd()" class="w3-btn w3-black"> No </a> <!-- these are the buttons that direct you to page 2, it also records your responses-->
 	  </h2>
 	</div>
 		</div>
