--- a/index.html
+++ b/index.html
@@ -116,7 +116,21 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>Content of page 2 goes here.</p>
+		<p>Do you have a fever?</p>
+		
+		<div id="content" class="w3-container">
+        <p>?</p> 
+		
+	<title>W3.CSS</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<body>
+
+	<div class="w3-container">
+	  <h2>
+	  <a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>
+	  <a href="#two" onclick="allergyAdd()" class="w3-btn w3-black"> No </a> 
+	  </h2>
 	</div>
 </div>	
 
