--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <div class="page" id="one"> <!--This denotes a new page-->
 	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Question 1</h1>
+		<h1>Question 1/4</h1>
 	</div>
 	
     	<div id="content" class="w3-container">
@@ -112,7 +112,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <div class="page" id="two"> <!--This denotes a new page-->
 	<div class="w3-container w3-flat-carrot">
-		<h1>Question 2</h1>
+		<h1>Question 2/4</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
@@ -133,7 +133,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		
 <div class="page" id="three"> <!--This denotes a new page-->
 	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Question 1</h1>
+		<h1>Question 3/4</h1>
 	</div>
 	
     	<div id="content" class="w3-container">
