--- a/index.html
+++ b/index.html
@@ -146,12 +146,35 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<div class="w3-container">
 	  <h2>
-	  <a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a> <!--these are the buttons that direct you to page 2 and record your responses-->
-	  <a href="#two" onclick="allergyAdd()" class="w3-btn w3-black"> No </a> 
+	  <a href="#four" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a> <!--these are the buttons that direct you to page 2 and record your responses-->
+	  <a href="#four" onclick="allergyAdd()" class="w3-btn w3-black"> No </a> 
 	  </h2>
 	</div>
 		</div>
 </div>
+	
+<div class="page" id="four"> <!--This denotes a new page-->
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Question 4/4</h1>
+	</div>
+	
+    	<div id="content" class="w3-container">
+        <p>Are your eyes watery or itchy?</p> 
+		
+	<title>W3.CSS</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<body>
+
+	<div class="w3-container">
+	  <h2>
+	  <a href="#four" onclick="allergyAdd();"class="w3-btn w3-black"> Yes </a> <!--these are the buttons that direct you to page 2 and record your responses-->
+	  <a href="#four" onclick="coldAdd()" class="w3-btn w3-black"> No </a> 
+	  </h2>
+	</div>
+		</div>
+</div>
+
 
 <footer class="w3-bottom w3-container w3-flat-carrot"> <!--This makes the pop up "DIY" at the bottom-->
 	<p>DIY!</p>
