--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<div class="w3-container">
 	  <h2>
-	  <a href="#four" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a> <!--these are the buttons that direct you to page 2 and record your responses-->
+	  <a href="#four" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>
 	  <a href="#four" onclick="allergyAdd()" class="w3-btn w3-black"> No </a> 
 	  </h2>
 	</div>
@@ -168,9 +168,18 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<div class="w3-container">
 	  <h2>
-	  <a href="#four" onclick="allergyAdd();"class="w3-btn w3-black"> Yes </a> <!--these are the buttons that direct you to page 2 and record your responses-->
-	  <a href="#four" onclick="coldAdd()" class="w3-btn w3-black"> No </a> 
+	  <a href="#five" onclick="allergyAdd();"class="w3-btn w3-black"> Yes </a> 
+	  <a href="#five" onclick="coldAdd()" class="w3-btn w3-black"> No </a> 
 	  </h2>
+	</div>
+		</div>
+</div>
+
+<div class="page" id="five"> <!--This denotes a new page-->
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Results</h1> <!--This will be the reults page so I changed the header to reflect that-->
+	</div>
+	
 	</div>
 		</div>
 </div>
