--- a/index.html
+++ b/index.html
@@ -185,9 +185,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 
 
-<footer class="w3-bottom w3-container w3-flat-carrot"> <!--This makes the pop up "DIY" at the bottom-->
-	<p>DIY!</p>
-</footer>
+<!--This used to make a pop up saying "DIY" at the bottom but I removed it for simplicity-->
 
 </body>
 </html>
