--- a/index.html
+++ b/index.html
@@ -206,9 +206,13 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 <div class="page" id="six"> 
 	<p id="Results()"></p> <!--This gives me a place to put the results-->
+	</div>
+		</div>
+</div>
 
-
-<!--This used to make a pop up saying "DIY" at the bottom but I removed it for simplicity-->
-
+<footer class="w3-bottom w3-container w3-flat-carrot"> <!--This makes a footer at the bottom of the page-->
+	<p>DIY!</p>
+	</footer>
+	
 </body>
 </html>
