--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		</div>
 </div>
 
-<div class="page" id="two"> <!--This denotes a new page-->
-	<div class="w3-container w3-flat-carrot">
+<div class="page" id="two"> <!--This denotes a new page--> 
+	<div class="w3-container w3-flat-carrot"> <!--Much of this is copy and paste from page 1, I will resume notes when I do something different-->
 		<h1>Question 2/4</h1>
 	</div>
 	
