--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
 <script>
-        var allergy_count = 0;
+        var allergy_count = 0; <!--These are the variables for the function that keeps count of the responses-->
         var cold_count = 0;
 
 
@@ -88,18 +88,18 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </style>
 
 <body>
-<div id="header" class="w3-container w3-flat-carrot">
+<div id="header" class="w3-container w3-flat-carrot"> <!--This gives the header its styling-->
 	<h1>Cold or Allergies?</h1>
 </div>
 	
 <div id="content" class="w3-container">
-	<p>Are you feeling like you might have a cold but wonder if it is allergies. Answer a few short questions to find out!</p>
+	<p>Are you feeling like you might have a cold but wonder if it is allergies. Answer a few short questions to find out!</p> <!--These are the opening paragraphs, explinations, and disclaimers-->
 	
 	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a>
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
-	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
+	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p> 
 
 <div class="page" id="one"> <!--This denotes a new page-->
 	<div id="header" class="w3-container w3-flat-carrot">
@@ -109,7 +109,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p> 
 		
-	<title>W3.CSS</title>
+	<title>W3.CSS</title> <!--these make the buttons function and have styling-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<body>
@@ -249,7 +249,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 <div class="page" id="eight"> 
 	<p id="Results()"></p> <!--This gives me a place to put the results-->
     <body>
-    <p>Remember these are only estimates, please speak to your medical proffessional if your symptoms are severe.</p>
+    <p>Remember these are only estimates, please speak to your medical proffessional if your symptoms are severe.</p> <!--This is one alternate survey assisted diagnostic idea-->
 	</div>
         </div>
 </div>
